--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-"bevy" = "0.13.1"
-"bevy_utils" = "0.13.1"
+bevy = "0.13.2"
 "swash" = "0.1.13"
 "thiserror" = "1.0"
